--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pylint==2.4.4
 requests==2.23.0
+simplejson==3.17.0
 six==1.14.0
 soupsieve==2.0
 typed-ast==1.4.1
